[project]
name = "ser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "funasr>=1.2.6",
    "numpy>=2.1.2",
    "pyaudio>=0.2.14",
    "simpleobsws>=1.4.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.13",
]
